--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mdx-js/react": "^1.6.22",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
@@ -28,15 +28,17 @@
     "gatsby-plugin-theme-ui": "^0.14.4",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.14.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.26",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.15",
+    "@types/node": "^17.0.27",
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.6.3"
   }
 }
