--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -39,6 +40,7 @@
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
     "@types/react-helmet": "^6.1.5",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.6.3"
   }
 }
