--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "bootstrap": "^5.1.3",
-    "gatsby": "^4.12.1",
+    "gatsby": "^4.24.4",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
-    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-plugin-sitemap": "^5.12.1",
     "gatsby-plugin-theme-ui": "^0.14.4",
-    "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.12.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
@@ -36,6 +36,7 @@
     "theme-ui": "^0.14.4"
   },
   "devDependencies": {
+    "@mdx-js/react": "^1.6.22",
     "@types/node": "^17.0.27",
     "@types/react": "^18.0.7",
     "@types/react-dom": "^18.0.0",
